# ConvAccelerate

./: .gitignore  CMakeLists.txt  README.md
alogrithmSrc/: Ascend.c  Ascend_nchw.c  Ascend_nhwc.c  im2Batchcopy_conv.c  im2col_IMW_conv.c  im2col_conv.c  im2cube_conv.c  im2memcopy_conv.c  reference_conv.c  utils.c  winogradF22_conv.c  winogradF63_conv.c
inc/: common_types.h  conv_layers.h  data_reshape.h  utils.h
src/: main.c
